par doesnt work -->overflow

--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -145,6 +145,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class PARCoefficients:\n",
+    "    \"\"\"\n",
+    "    :param im: immersion coefficient\n",
+    "    :param a0: calibration slope\n",
+    "    :param a1: calibration offset\n",
+    "    :param multiplier: 1.0 for units of μEinsteins/m2 sec\n",
+    "    \"\"\"\n",
+    "\n",
+    "    im: float\n",
+    "    a0: float\n",
+    "    a1: float\n",
+    "    multiplier: float\n",
+    "\n",
     "class PAR_Coefficients:\n",
     "    m: float\n",
     "    b: float\n",
@@ -255,23 +268,20 @@
     "oxy2_coefs.d2 = -4.64803e-002\n",
     "oxy2_coefs.h1 = -3.3000e-002\n",
     "oxy2_coefs.h2 = 5.0000e+003\n",
-    "oxy2_coefs.h3 = 1.4500e+003"
+    "oxy2_coefs.h3 = 1.4500e+003\n",
+    "\n",
+    "\n",
+    "\n",
+    "par_coefs = PARCoefficients()\n",
+    "par_coefs.im = 1.00000000\n",
+    "par_coefs.a0 = 11273957159.00000000\n",
+    "par_coefs.a1 = -0.09022432\n",
+    "par_coefs.multiplier = 1.00000000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "673fcc15-0f85-4111-a17b-7d1f4c8c7fa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temperatures1 = []\n",
-    "temperatures2 = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "3bc05491-cb85-4d7d-9897-d0414487d746",
    "metadata": {},
    "outputs": [],
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6d464725-bbe6-4d08-9b14-e70275bea40c",
    "metadata": {},
    "outputs": [],
@@ -324,12 +334,29 @@
     "    \"\"\"\n",
     "    dt = 1 / freq  # time interval per measurement\n",
     "    elapsed = [i * dt for i in range(len(hexstrings))]\n",
-    "    return elapsed"
+    "    return elapsed\n",
+    "\n",
+    "def convert_par_logarithmic(\n",
+    "    raw_par: np.ndarray,\n",
+    "    coefs: PARCoefficients,\n",
+    "):\n",
+    "    \"\"\"Converts a raw voltage value for PAR to µmol photons/m2*s.\n",
+    "\n",
+    "    All equation information comes from application note 96\n",
+    "\n",
+    "    :param raw_par: raw output voltage from PAR sensor\n",
+    "    :param coefs: calibration coefficients for the PAR sensor\n",
+    "\n",
+    "    :return: converted PAR in µmol photons/m2*s\n",
+    "    \"\"\"\n",
+    "    par = coefs.multiplier * coefs.im * 10 ** ((raw_par - coefs.a0) / coefs.a1)\n",
+    "\n",
+    "    return par"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7dd2c272-0c03-4f3c-892b-3719f8717c90",
    "metadata": {},
    "outputs": [],
@@ -656,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6f69e4d0-c73c-4a83-b665-07108197a107",
    "metadata": {},
    "outputs": [
@@ -705,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "887e0d15-8177-42d5-853e-f2232fb23af9",
    "metadata": {},
    "outputs": [
@@ -736,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ddab0dd4-0d62-4d33-b942-3571b3b5b331",
    "metadata": {},
    "outputs": [
@@ -773,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "828f3069-762b-43c2-8142-73bf1f582230",
    "metadata": {},
    "outputs": [
@@ -798,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e5f5b762-14d7-4a9d-b33e-7f7daeafb86f",
    "metadata": {},
    "outputs": [
@@ -847,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "892a6242-e260-48cf-9af7-3524404ddc85",
    "metadata": {},
    "outputs": [
@@ -866,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "0781e9df-4a07-48e4-9fbb-f92dc1891d64",
    "metadata": {},
    "outputs": [
@@ -896,11 +923,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9b924ce5-5740-4bf1-814e-dc8cd766eed2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.220658476937556e+102\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_par = hex_to_voltage(hex_string[36:39])\n",
+    "\n",
+    "par = convert_par_logarithmic(raw_par, coefs = par_coefs)\n",
+    "print(par)"
+   ]
   },
   {
    "cell_type": "code",
@@ -912,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "15b7c585-9d78-4730-a207-e09b123f6483",
    "metadata": {},
    "outputs": [
@@ -981,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "8936d814-7526-444a-829b-d67d6bb31a81",
    "metadata": {},
    "outputs": [
@@ -990,7 +1030,7 @@
      "evalue": "invalid character '°' (U+00B0) (359161837.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mname 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '°' (U+00B0)\n"
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mname 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '°' (U+00B0)\n"
      ]
     }
    ],
