--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -11,7 +11,8 @@
     "from dataclasses import dataclass\n",
     "import math\n",
     "from typing import Literal, List\n",
-    "import gsw  # TEOS-10 library (for salinity)"
+    "import gsw  # TEOS-10 library (for salinity)\n",
+    "from datetime import datetime, timezone"
    ]
   },
   {
@@ -818,16 +819,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Druck in dbar: -34908.5040609765\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'    \\npressure_counts = []\\n\\nfor byte_list in bytes_list_array:\\n    count = int(byte_list[6], 16) * 256 + int(byte_list[7], 16) + int(byte_list[8], 16) / 256\\n    pressure_counts.append(count)\\n\\npressure_counts = np.array(pressure_counts)\\n\\n\\ntemperature_counts = []\\n\\nfor hex_string in hexstrings:\\n    temperature_value = int(hex_string[60:63],16)\\n    temperature_counts.append(temperature_value)\\n\\ntemperature_counts = np.array(temperature_counts)\\n\\n\\npressure_counts123 = \\ntemp123 = 2300\\npressure = pressure_from_frequency(pressure_counts123, temp123, coefs=pres_coefs)\\nprint(\"Druck in dbar:\", pressure)\\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# name 0 = prDM: Pressure, Digiquartz [db]\n",
-    "    \n",
+    "\"\"\"    \n",
     "pressure_counts = []\n",
     "\n",
     "for byte_list in bytes_list_array:\n",
@@ -849,7 +853,8 @@
     "pressure_counts123 = \n",
     "temp123 = 2300\n",
     "pressure = pressure_from_frequency(pressure_counts123, temp123, coefs=pres_coefs)\n",
-    "print(\"Druck in dbar:\", pressure)"
+    "print(\"Druck in dbar:\", pressure)\n",
+    "\"\"\""
    ]
   },
   {
@@ -1135,12 +1140,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Latitudes: [54.50402, 54.50402, 54.50402, 54.50402, 54.50402, 54.50402, 54.50402, 54.50402, 54.50402, 54.50402]\n",
-      "Longitudes: [23.8112, 23.8112, 23.8112, 23.8112, 23.8112, 23.8112, 23.8112, 23.8112, 23.8112, 23.8112]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nnavi_hex = []\\nlatitudes = []\\nlongitudes = []\\n\\nfor hex_string in hexstrings:\\n    navi = hex_string[60:74]\\n    navi_hex.append(navi)\\n\\nnavi_hex = np.array(navi_hex)\\n\\n\\nfor hex_str in navi_hex:\\n        # Bytes extrahieren\\n        bytes_list = [int(hex_str[i:i+2], 16) for i in range(len(hex_str))]\\n        # Bytes aufsplitten\\n        b1, b2, b3, b4, b5, b6, b7 = bytes_list[:7]\\n\\n        # Latitude & Longitude berechnen\\n        lat = (b1 * 65536 + b2 * 256 + b3) / 50000.\\n        lon = (b4 * 65536 + b5 * 256 + b6) / 50000.\\n\\n        latitudes.append(lat)\\n        longitudes.append(lon)\\n\\nprint(\"Latitudes:\", latitudes)\\nprint(\"Longitudes:\",longitudes)\\n'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1337,63 +1344,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "15b7c585-9d78-4730-a207-e09b123f6483",
+   "execution_count": 29,
+   "id": "5291b7dd-6949-40e2-ac51-ffa74cb7a03b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temperatures1: [3.56156397 3.56140342 3.56172452 3.56172452 3.56188507 3.56156397\n",
-      " 3.56140342 3.56156397 3.56172452 3.56140342] °C\n",
-      "\n",
-      "Temperatures2: [3.56104427 3.56104427 3.56093531 3.56088084 3.56104427 3.56088084\n",
-      " 3.56077188 3.56077188 3.56104427 3.56104427] °C\n",
-      "\n",
-      "Conductifitys1: [15.3307893  15.33055485 15.33078936 15.33074239 15.3305549  15.33074246\n",
-      " 15.33069557 15.33083621 15.33074246 15.33069564] mS/cm\n",
-      "\n",
-      "Conductifitys2: [15.32989468 15.33007497 15.33002992 15.32989469 15.33007505 15.33002992\n",
-      " 15.33002993 15.3299848  15.33002991 15.32998493] mS/cm\n",
-      "\n",
-      "Oxygens1: [8.12350182 8.12840815 8.12832951 8.12347245 8.12356307 8.12355611\n",
-      " 8.12359115 8.12830742 8.12833235 8.12845219] ml/l\n",
-      "\n",
-      "Oxygens2: [8.12986258 8.12990316 8.12992827 8.12989616 8.12996323 8.12993947\n",
-      " 8.12444201 8.12991309 8.12438609 8.12996118] ml/l\n",
-      "\n",
-      "Oxygens3: [358.3635196  358.58001181 358.57651809 358.36226265 358.36635012\n",
-      " 358.36593255 358.36746887 358.57550118 358.57665784 358.58191457] umol/kg\n",
-      "\n",
-      "Oxygens4: [358.64431987 358.64605787 358.64716327 358.64577657 358.64871212\n",
-      " 358.64764884 358.40511542 358.64647918 358.40268922 358.64864886] umol/kg\n",
-      "\n",
-      "Fluorescence: [0.07936508 0.08058608 0.07936508 0.07936508 0.07936508 0.07936508\n",
-      " 0.07936508 0.07936508 0.07936508 0.08058608] mg/m^3\n",
-      "\n",
-      "Turbidity: [0.52689866 0.52689866 0.53178266 0.55376068 0.56352869 0.56352869\n",
-      " 0.5684127  0.60015873 0.61481074 0.61481074] NTU\n",
-      "\n",
-      "Par: [9.24020531 9.26647434 9.26647434 9.26647434 9.24020531 9.21401003\n",
-      " 9.16183989 9.13586462 9.10996228 9.08413265] µmol photons m−2s−1\n",
-      "\n",
-      "SPar: [366.85335775 366.85335775 366.85335775 366.85335775 366.85335775\n",
-      " 366.85335775 366.85335775 366.85335775 366.85335775 366.85335775] µmol photons m−2s−1\n",
-      "\n",
-      "Time_Elapsed: [0.0, 0.041666666666666664, 0.08333333333333333, 0.125, 0.16666666666666666, 0.20833333333333331, 0.25, 0.29166666666666663, 0.3333333333333333, 0.375] s\n",
-      "\n",
-      "Salinity1: [15.55212221 15.55192789 15.55203225 15.5519937  15.55168197 15.55205751\n",
-      " 15.55208277 15.55217384 15.55198062 15.55206942] PSU\n",
-      "\n",
-      "Salinity2: [15.5513864  15.55157168 15.55157426 15.55146467 15.55155642 15.55160035\n",
-      " 15.55165253 15.55161602 15.55152209 15.55145915] PSU\n",
-      "\n",
-      "Flag: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \n",
-      "\n"
+      "Date and Times ['2024-02-08 08:31:24' '2024-02-08 08:31:24' '2024-02-08 08:31:25'\n",
+      " '2024-02-08 08:31:25' '2024-02-08 08:31:25' '2024-02-08 08:31:25'\n",
+      " '2024-02-08 08:31:25' '2024-02-08 08:31:25' '2024-02-08 08:31:25'\n",
+      " '2024-02-08 08:31:25']\n"
      ]
     }
    ],
+   "source": [
+    "# Date and Time\n",
+    "swapped = [\n",
+    "    \"\".join([s[-8:][i:i+2] for i in range(0, 8, 2)][::-1])\n",
+    "    for s in hexstrings\n",
+    "]\n",
+    "timestamps = [int(x, 16) for x in swapped]    \n",
+    "datetimes = [datetime.fromtimestamp(ts, tz=timezone.utc) for ts in timestamps]\n",
+    "datetimes_formatted = np.array([d.strftime(\"%Y-%m-%d %H:%M:%S\") for d in datetimes])\n",
+    "print(\"Date and Times\", datetimes_formatted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15b7c585-9d78-4730-a207-e09b123f6483",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# print(\"Pressures:\", pressures,\"db\\n\")\n",
     "\n",
@@ -1424,19 +1407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "8936d814-7526-444a-829b-d67d6bb31a81",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '°' (U+00B0) (950467276.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mname 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '°' (U+00B0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name 0 = Pressure: -42139.332086015915 db                        --> Falsch\n",
     "name 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\n",
@@ -1515,7 +1489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
