--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -816,7 +816,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "b8cd5401-6d3d-4ac4-8bcf-5262ec730f4f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1135,50 +1141,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "73d1bd1e-6f44-4141-9bc2-7a1c5f365636",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nnavi_hex = []\\nlatitudes = []\\nlongitudes = []\\n\\nfor hex_string in hexstrings:\\n    navi = hex_string[60:74]\\n    navi_hex.append(navi)\\n\\nnavi_hex = np.array(navi_hex)\\n\\n\\nfor hex_str in navi_hex:\\n        # Bytes extrahieren\\n        bytes_list = [int(hex_str[i:i+2], 16) for i in range(len(hex_str))]\\n        # Bytes aufsplitten\\n        b1, b2, b3, b4, b5, b6, b7 = bytes_list[:7]\\n\\n        # Latitude & Longitude berechnen\\n        lat = (b1 * 65536 + b2 * 256 + b3) / 50000.\\n        lon = (b4 * 65536 + b5 * 256 + b6) / 50000.\\n\\n        latitudes.append(lat)\\n        longitudes.append(lon)\\n\\nprint(\"Latitudes:\", latitudes)\\nprint(\"Longitudes:\",longitudes)\\n'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Position: ['old', 'old', 'old', 'old', 'old', 'old', 'old', 'old', 'old', 'old']\n",
+      "Latitudes: [54.15508, 54.15508, 54.15508, 54.15508, 54.15508, 54.15508, 54.15508, 54.15508, 54.15508, 54.15508]\n",
+      "Longitudes: [11.29326, 11.29326, 11.29326, 11.29326, 11.29326, 11.29326, 11.29326, 11.29326, 11.29326, 11.29326]\n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"\n",
     "navi_hex = []\n",
     "latitudes = []\n",
     "longitudes = []\n",
-    "\n",
+    "position = []\n",
     "for hex_string in hexstrings:\n",
     "    navi = hex_string[60:74]\n",
     "    navi_hex.append(navi)\n",
     "    \n",
     "navi_hex = np.array(navi_hex)\n",
     "\n",
-    "\n",
     "for hex_str in navi_hex:\n",
     "        # Bytes extrahieren\n",
-    "        bytes_list = [int(hex_str[i:i+2], 16) for i in range(len(hex_str))]\n",
+    "        bytes_list = [int(hex_str[i:i+2], 16) for i in range(0, len(hex_str)-2, 2)]\n",
     "        # Bytes aufsplitten\n",
-    "        b1, b2, b3, b4, b5, b6, b7 = bytes_list[:7]\n",
-    "\n",
+    "        b1, b2, b3, b4, b5, b6 = bytes_list[:6]\n",
+    "        last_byte_hex = hex_str[-2:]\n",
+    "        b7 = format(int(last_byte_hex, 16), '08b') \n",
     "        # Latitude & Longitude berechnen\n",
-    "        lat = (b1 * 65536 + b2 * 256 + b3) / 50000.\n",
-    "        lon = (b4 * 65536 + b5 * 256 + b6) / 50000.\n",
+    "        lat = ((b1 * 65536 + b2 * 256 + b3) / 50000) * (-1)**int(b7[6])\n",
+    "        lon = ((b4 * 65536 + b5 * 256 + b6) / 50000) * (-1)**int(b7[7])\n",
     "\n",
+    "        if b7[1] == 1:\n",
+    "            pos = \"new\"\n",
+    "        else: \n",
+    "            pos = \"old\"\n",
+    "        position.append(pos)\n",
     "        latitudes.append(lat)\n",
     "        longitudes.append(lon)\n",
-    "    \n",
+    "print(\"Position:\", position)  \n",
     "print(\"Latitudes:\", latitudes)\n",
-    "print(\"Longitudes:\",longitudes)\n",
-    "\"\"\""
+    "print(\"Longitudes:\",longitudes)"
    ]
   },
   {
@@ -1344,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "5291b7dd-6949-40e2-ac51-ffa74cb7a03b",
    "metadata": {},
    "outputs": [
@@ -1373,10 +1381,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "15b7c585-9d78-4730-a207-e09b123f6483",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperatures1: [3.56156397 3.56140342 3.56172452 3.56172452 3.56188507 3.56156397\n",
+      " 3.56140342 3.56156397 3.56172452 3.56140342] °C\n",
+      "\n",
+      "Temperatures2: [3.56104427 3.56104427 3.56093531 3.56088084 3.56104427 3.56088084\n",
+      " 3.56077188 3.56077188 3.56104427 3.56104427] °C\n",
+      "\n",
+      "Conductifitys1: [15.3307893  15.33055485 15.33078936 15.33074239 15.3305549  15.33074246\n",
+      " 15.33069557 15.33083621 15.33074246 15.33069564] mS/cm\n",
+      "\n",
+      "Conductifitys2: [15.32989468 15.33007497 15.33002992 15.32989469 15.33007505 15.33002992\n",
+      " 15.33002993 15.3299848  15.33002991 15.32998493] mS/cm\n",
+      "\n",
+      "Oxygens1: [8.12350182 8.12840815 8.12832951 8.12347245 8.12356307 8.12355611\n",
+      " 8.12359115 8.12830742 8.12833235 8.12845219] ml/l\n",
+      "\n",
+      "Oxygens2: [8.12986258 8.12990316 8.12992827 8.12989616 8.12996323 8.12993947\n",
+      " 8.12444201 8.12991309 8.12438609 8.12996118] ml/l\n",
+      "\n",
+      "Oxygens3: [358.3635196  358.58001181 358.57651809 358.36226265 358.36635012\n",
+      " 358.36593255 358.36746887 358.57550118 358.57665784 358.58191457] umol/kg\n",
+      "\n",
+      "Oxygens4: [358.64431987 358.64605787 358.64716327 358.64577657 358.64871212\n",
+      " 358.64764884 358.40511542 358.64647918 358.40268922 358.64864886] umol/kg\n",
+      "\n",
+      "Fluorescence: [0.07936508 0.08058608 0.07936508 0.07936508 0.07936508 0.07936508\n",
+      " 0.07936508 0.07936508 0.07936508 0.08058608] mg/m^3\n",
+      "\n",
+      "Turbidity: [0.52689866 0.52689866 0.53178266 0.55376068 0.56352869 0.56352869\n",
+      " 0.5684127  0.60015873 0.61481074 0.61481074] NTU\n",
+      "\n",
+      "Par: [9.24020531 9.26647434 9.26647434 9.26647434 9.24020531 9.21401003\n",
+      " 9.16183989 9.13586462 9.10996228 9.08413265] µmol photons m−2s−1\n",
+      "\n",
+      "SPar: [366.85335775 366.85335775 366.85335775 366.85335775 366.85335775\n",
+      " 366.85335775 366.85335775 366.85335775 366.85335775 366.85335775] µmol photons m−2s−1\n",
+      "\n",
+      "Time_Elapsed: [0.0, 0.041666666666666664, 0.08333333333333333, 0.125, 0.16666666666666666, 0.20833333333333331, 0.25, 0.29166666666666663, 0.3333333333333333, 0.375] s\n",
+      "\n",
+      "Salinity1: [15.55212221 15.55192789 15.55203225 15.5519937  15.55168197 15.55205751\n",
+      " 15.55208277 15.55217384 15.55198062 15.55206942] PSU\n",
+      "\n",
+      "Salinity2: [15.5513864  15.55157168 15.55157426 15.55146467 15.55155642 15.55160035\n",
+      " 15.55165253 15.55161602 15.55152209 15.55145915] PSU\n",
+      "\n",
+      "Flag: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# print(\"Pressures:\", pressures,\"db\\n\")\n",
     "\n",
@@ -1407,10 +1468,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "8936d814-7526-444a-829b-d67d6bb31a81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '°' (U+00B0) (950467276.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mname 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '°' (U+00B0)\n"
+     ]
+    }
+   ],
    "source": [
     "name 0 = Pressure: -42139.332086015915 db                        --> Falsch\n",
     "name 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\n",
