TODO: Fix pressure

--- a/Pressure.ipynb
+++ b/Pressure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "027ade02-dbd4-42e6-9dc7-28f77f7f8339",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a0648436-9a55-451a-a7cc-2a900e96f792",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "17eb9dc0-cf47-4aea-b250-4a5bbfdca2d8",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,8 @@
     "    :return: Druck in dbar\n",
     "    \"\"\"\n",
     "\n",
-    "    U = temp_counts # coefs.AD590M * temp_counts + coefs.AD590B\n",
+    "    U = coefs.AD590M * temp_counts + coefs.AD590B\n",
+    "    print(U)\n",
     "    C = coefs.C1 + coefs.C2 * U + coefs.C3 * U **2\n",
     "    D = coefs.D1 + coefs.D2 * U\n",
     "    T0 = (\n",
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "cd58e130-1f02-411c-9218-e4dc60df6607",
    "metadata": {},
    "outputs": [
@@ -116,10 +117,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Press_Periode: 30.452933860629052\n",
-      "Temperature: 6.62\n",
-      "Druck in psi 16.45957615372489 gewünscht: 1.667\n",
-      "Druck in dbar: 11.34848272816562 gewünscht: 1.149\n"
+      "[32837.55859375 32837.5859375  32837.5859375  32837.55859375\n",
+      " 32837.6171875  32837.5859375  32837.5859375  32837.55859375\n",
+      " 32837.5859375  32837.61328125]\n",
+      "[30.45293386 30.4529085  30.4529085  30.45293386 30.45287952 30.4529085\n",
+      " 30.4529085  30.45293386 30.4529085  30.45288314]\n",
+      "[6.6233558 6.6233558 6.6233558 6.6233558 6.6233558 6.6233558 6.6233558\n",
+      " 6.6233558 6.6233558 6.6233558]\n",
+      "Druck in psi [-8.37571541 -8.37571541 -8.37571541 -8.37571541 -8.37571541 -8.37571541\n",
+      " -8.37571541 -8.37571541 -8.37571541 -8.37571541] gewünscht: 1.667\n",
+      "Druck in dbar: [-5.77485476 -5.77485476 -5.77485476 -5.77485476 -5.77485476 -5.77485476\n",
+      " -5.77485476 -5.77485476 -5.77485476 -5.77485476] gewünscht: 1.149\n"
      ]
     }
    ],
@@ -132,39 +140,42 @@
     "    pressure_counts.append(count)\n",
     "\n",
     "pressure_counts = np.array(pressure_counts)\n",
-    "# print(\"Pressure_freq:\", pressure_counts)\n",
     "\n",
-    "\n",
-    "\"\"\"\n",
+    "print(pressure_counts)\n",
     "temperature_counts = []\n",
     "\n",
     "for hex_string in hexstrings:\n",
-    "    temperature_value = int(hex_string[60:63],16)\n",
+    "    temperature_value = int(hex_string[74:77],16)\n",
     "    temperature_counts.append(temperature_value)\n",
     "\n",
     "temperature_counts = np.array(temperature_counts)\n",
-    "print(\"Temperature_counts:\", temperature_counts)\n",
-    "\"\"\"\n",
     "\n",
     "\n",
-    "pressfreq = 32837.55859375\n",
-    "press_periode = 1/pressfreq\n",
+    "\n",
+    "\n",
+    "press_periode = 1/ pressure_counts\n",
     "\n",
     "press_periode = press_periode * 10**6\n",
     "# Periode zwischen den Messungen\n",
-    "print(\"Press_Periode:\", press_periode)\n",
+    "print(press_periode)\n",
     "\n",
-    "temp_count = 3184\n",
-    "temp = 6.62 # 1.279410e-002 * temp_count + -9.215740e+000 \n",
-    "print(\"Temperature:\", temp)\n",
-    "\n",
-    "pressure = pressure_from_frequency(press_periode, temp, coefs=pres_coefs)\n",
+    "pressure = pressure_from_frequency(press_periode, temperature_counts, coefs=pres_coefs)\n",
     "\n",
     "\n",
     "print(\"Druck in psi\", pressure, \"gewünscht: 1.667\")\n",
     "pressure = pressure * 0.689476 # Druck von psia in db\n",
     "\n",
     "print(\"Druck in dbar:\", pressure, \"gewünscht: 1.149\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7212c4ab-f325-4137-a122-c1a5171006fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "30.46191"
    ]
   }
  ],
