--- a/Pressure_Test.ipynb
+++ b/Pressure_Test.ipynb
@@ -3,21 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "508f415a-3a2b-4cd1-9ca9-010d8079c49f",
+   "id": "6dbc0226-c320-4797-9b85-bbf0ba2e12c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from dataclasses import dataclass\n",
-    "import math\n",
-    "from typing import Literal, List\n",
-    "import gsw "
+    "from typing import Literal, List"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a45c546e-9ae8-4c86-a811-5020bd201eef",
+   "id": "fe8e9fe1-7ee0-4290-a7e7-ff35edc4bc53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a775ae1f-da95-48f4-b31e-c86a873bd834",
+   "id": "cdee8f22-ee53-45f0-b6e6-d590add7f933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +47,6 @@
     "    AD590B: float\n",
     "    \n",
     "pres_coefs = PressureCoefficients()\n",
-    "pres_coefs.C1 = -4.212464e+004\n",
     "pres_coefs.C2 = -1.972709e-001\n",
     "pres_coefs.C3 = 1.365930e-002\n",
     "\n",
@@ -72,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0ed4fd67-bdf9-44f7-a014-fc0991d99eae",
+   "id": "508f415a-3a2b-4cd1-9ca9-010d8079c49f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,29 +107,30 @@
     "    if units == \"dbar\":\n",
     "        pressure *= PSI_TO_DBAR\n",
     "    \n",
-    "    return pressure\n"
+    "    return pressure"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ac4340b-e0fc-4071-bc19-6017c735d7ef",
+   "id": "d47fb2f2-a0a0-45dc-888b-a9593860dc05",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.14901189 1.19740283 1.19740283 1.14901189 1.25270682]\n"
+      "Druck in db: [ 1.14901189  1.19740283  1.19740283  1.14901189  1.25270682 23.5767095\n",
+      " 23.4858149  23.52829721]\n"
      ]
     }
    ],
    "source": [
-    "pressure_count = np.array([32837.55859375, 32837.5859375,  32837.5859375,  32837.55859375, 32837.6171875])\n",
-    "temperature_count = np.array([1238, 1238, 1238, 1238, 1238])\n",
+    "pressure_count = np.array([32837.55859375, 32837.5859375,  32837.5859375,  32837.55859375, 32837.6171875, 32850.2109375, 32850.1640625, 32850.18359375])  # Druckfreqenz\n",
+    "temperature_count = np.array([1238, 1238, 1238, 1238, 1238, 1234, 1235, 1234]) # Druck count\n",
     "\n",
     "pressure = pressure_from_frequency(pressure_count, temperature_count, coefs=pres_coefs, units=\"dbar\")\n",
-    "print(pressure)"
+    "print(\"Druck in db:\",pressure)"
    ]
   }
  ],
