--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -36,7 +36,8 @@
     "# [J K^{-1} mol^{-1}] Gas constant, NIST Reference on Constants retrieved 10-05-2015\n",
     "R = 8.3144621\n",
     "# [Coulombs mol^{-1}] Faraday constant, NIST Reference on Constants retrieved 10-05-2015\n",
-    "F = 96485.365"
+    "F = 96485.365\n",
+    "sea_level_pressure = 14.7"
    ]
   },
   {
@@ -386,14 +387,19 @@
     "\n",
     "    return descent_rate\n",
     "\n",
-    "def pressure_from_frequency(pressure_freq: np.ndarray, temp_counts: np.ndarray, coefs: PressureCoefficients):\n",
+    "def pressure_from_frequency(\n",
+    "    pressure_counts: np.ndarray, \n",
+    "    temp_counts: np.ndarray, \n",
+    "    coefs: PressureCoefficients,\n",
+    "    units: Literal[\"dbar\", \"psia\"] = \"psia\"\n",
+    "):\n",
     "    \"\"\"\n",
-    "    Berechnet den Druck [dbar] aus Digiquartz-Frequenz und Temperaturfrequenz (arrays erlaubt).\n",
+    "    Berechnet den Druck [psia] aus Digiquartz-Frequenz und Temperaturcount (arrays erlaubt).\n",
     "\n",
     "    :param freq_hz: gemessene Druckfrequenz [Hz]\n",
-    "    :param temp_freq_hz: gemessene Temperaturfrequenz [Hz]\n",
+    "    :param temp_freq_hz: gemessene Temperaturcount\n",
     "    :param coefs: PressureCoefficients\n",
-    "    :return: Druck in dbar\n",
+    "    :return: Druck in psia\n",
     "    \"\"\"\n",
     "\n",
     "    U = coefs.AD590M * temp_counts + coefs.AD590B\n",
@@ -406,13 +412,17 @@
     "        + coefs.T4 * U **3 \n",
     "        + coefs.T5 * U **4\n",
     "    )\n",
+    "    # Pressure Periode in µs\n",
+    "    T = 10**6 / pressure_counts\n",
     "    \n",
-    "    T = pressure_freq\n",
-    "\n",
     "    pressure = C * (1 - (T0**2/T**2)) * (1 - D * (1 -(T0**2/T**2)))\n",
-    "    pressure = (pressure + coefs.Offset) * coefs.Slope\n",
-    "\n",
+    "    pressure = pressure * coefs.Slope + (coefs.Offset * DBAR_TO_PSI) - sea_level_pressure\n",
+    "    \n",
+    "    if units == \"dbar\":\n",
+    "        pressure *= PSI_TO_DBAR\n",
+    "    \n",
     "    return pressure\n",
+    "\n",
     "\n",
     "\n",
     "    \n",
@@ -822,10 +832,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Druck in psi [16.45657584 16.52676095 16.52676095 16.45657584 16.60697258 16.52676095\n",
-      " 16.52676095 16.45657584 16.52676095 16.59694612] gewünscht: 1.667\n",
-      "Druck in dbar: [11.34641408 11.39480503 11.39480503 11.34641408 11.45010903 11.39480503\n",
-      " 11.39480503 11.34641408 11.39480503 11.44319603] gewünscht: 1.149\n"
+      "Druck in psi [1.66650044 1.73668555 1.73668555 1.66650044 1.81689718 1.73668555\n",
+      " 1.73668555 1.66650044 1.73668555 1.80687072] gewünscht: 1.667\n",
+      "Druck in dbar: [1.14901189 1.19740283 1.19740283 1.14901189 1.25270682 1.19740283\n",
+      " 1.19740283 1.14901189 1.19740283 1.24579382] gewünscht: 1.149\n"
      ]
     }
    ],
@@ -839,9 +849,6 @@
     "\n",
     "pressure_counts = np.array(pressure_counts)\n",
     "\n",
-    "press_periode = 1/pressure_counts * 10**6\n",
-    "\n",
-    "\n",
     "temperature_counts = []\n",
     "\n",
     "for hex_string in hexstrings:\n",
@@ -850,13 +857,13 @@
     "\n",
     "temperature_counts = np.array(temperature_counts)\n",
     "\n",
+    "pressure = pressure_from_frequency(pressure_counts, temperature_counts, coefs=pres_coefs)\n",
     "\n",
     "\n",
-    "pressure = pressure_from_frequency(press_periode, temperature_counts, coefs=pres_coefs)\n",
     "print(\"Druck in psi\", pressure, \"gewünscht: 1.667\")\n",
-    "pressures = pressure * 0.689476 # Druck von psia in db\n",
+    "pressure *= PSI_TO_DBAR # Druck von psia zu db laut seabird\n",
     "\n",
-    "print(\"Druck in dbar:\", pressures, \"gewünscht: 1.149\")"
+    "print(\"Druck in dbar:\", pressure, \"gewünscht: 1.149\")"
    ]
   },
   {
@@ -1093,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "id": "1c17785e-7224-4dda-a14d-5b247fefee93",
    "metadata": {},
    "outputs": [
@@ -1104,10 +1111,7 @@
       "Voltages: [1.16971917 1.17094017 1.17094017 1.17216117 1.17094017 1.16971917\n",
       " 1.16971917 1.17094017 1.16971917 1.16971917]\n",
       "Alimeter: [17.54578755 17.56410256 17.56410256 17.58241758 17.56410256 17.54578755\n",
-      " 17.54578755 17.56410256 17.54578755 17.54578755]\n",
-      "Time_elapsed [0.0, 0.041666666666666664, 0.08333333333333333, 0.125, 0.16666666666666666, 0.20833333333333331, 0.25, 0.29166666666666663, 0.3333333333333333, 0.375]\n",
-      "Descentrates: [ 0.43956044  0.          0.43956044 -0.43956044 -0.43956044  0.\n",
-      "  0.43956044 -0.43956044  0.        ]\n"
+      " 17.54578755 17.56410256 17.54578755 17.54578755]\n"
      ]
     }
    ],
@@ -1123,16 +1127,7 @@
     "\n",
     "alt_m = 15.0 * voltages3 + 0.0\n",
     "print(\"Voltages:\", voltages3)\n",
-    "print(\"Alimeter:\",alt_m)\n",
-    "print(\"Time_elapsed\",time_elapsed)\n",
-    "\n",
-    "dz = np.diff(alt_m)\n",
-    "dt = np.diff(time_elapsed)\n",
-    "descent_rate = dz/dt\n",
-    "\n",
-    "\n",
-    "descent_rate = convert_ali(alt_m, time_elapsed)\n",
-    "print(\"Descentrates:\", descent_rate)"
+    "print(\"Alimeter:\",alt_m)"
    ]
   },
   {
@@ -1145,10 +1140,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deaths:  [11.24432707 11.29228131 11.29228131 11.24432707 11.34708619 11.29228131\n",
-      " 11.29228131 11.24432707 11.29228131 11.34023558]\n",
-      "Sinkraten (m/s): [ 1.15090161  0.         -1.15090161  2.46621874 -1.31531714  0.\n",
-      " -1.15090161  1.15090161  1.15090243]\n"
+      "Deaths:  [1.13873685 1.18669492 1.18669492 1.13873685 1.24150418 1.18669492\n",
+      " 1.18669492 1.13873685 1.18669492 1.23465302]\n",
+      "Sinkraten (m/s): [ 1.15099357  0.         -1.15099357  2.46641581 -1.31542224  0.\n",
+      " -1.15099357  1.15099357  1.1509944 ]\n"
      ]
     }
    ],
@@ -1156,7 +1151,7 @@
     "# name 14 = dz/dtM: Descent Rate [m/s] \n",
     "pressure_test_array = np.array([1.149,1.197,1.197,1.149,1.253,1.197,1.197,1.149,1.197,1.246])\n",
     "latitude = 54.50402\n",
-    "depths = depth_from_pressure(pressure_test_array, latitude)\n",
+    "depths = depth_from_pressure(pressure, latitudes)\n",
     "print(\"Deaths: \",depths)\n",
     "\n",
     "\n",
@@ -1412,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "15b7c585-9d78-4730-a207-e09b123f6483",
    "metadata": {},
    "outputs": [
@@ -1420,8 +1415,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pressures: [11.34641408 11.39480503 11.39480503 11.34641408 11.45010903 11.39480503\n",
-      " 11.39480503 11.34641408 11.39480503 11.44319603] db\n",
+      "Pressures: [1.14901189 1.19740283 1.19740283 1.14901189 1.25270682 1.19740283\n",
+      " 1.19740283 1.14901189 1.19740283 1.24579382] db\n",
       "\n",
       "Temperatures1: [3.56156397 3.56140342 3.56172452 3.56172452 3.56188507 3.56156397\n",
       " 3.56140342 3.56156397 3.56172452 3.56140342] °C\n",
@@ -1473,7 +1468,7 @@
     }
    ],
    "source": [
-    "print(\"Pressures:\", pressures,\"db\\n\")\n",
+    "print(\"Pressures:\", pressure,\"db\\n\")\n",
     "\n",
     "print(\"Temperatures1:\", temperatures1,\"°C\\n\")\n",
     "print(\"Temperatures2:\", temperatures2,\"°C\\n\")\n",
@@ -1502,19 +1497,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "8936d814-7526-444a-829b-d67d6bb31a81",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '°' (U+00B0) (950467276.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mname 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '°' (U+00B0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name 0 = Pressure: -42139.332086015915 db                        --> Falsch\n",
     "name 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\n",
