--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "1c17785e-7224-4dda-a14d-5b247fefee93",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "b81943ef-57b0-447a-a860-e228a418982c",
    "metadata": {},
    "outputs": [
@@ -1140,10 +1140,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deaths:  [1.13873685 1.18669492 1.18669492 1.13873685 1.24150418 1.18669492\n",
-      " 1.18669492 1.13873685 1.18669492 1.23465302]\n",
-      "Sinkraten (m/s): [ 1.15099357  0.         -1.15099357  2.46641581 -1.31542224  0.\n",
-      " -1.15099357  1.15099357  1.1509944 ]\n"
+      "Deaths:  [1.13870209 1.18665869 1.18665869 1.13870209 1.24146628 1.18665869\n",
+      " 1.18665869 1.13870209 1.18665869 1.23461533]\n",
+      "Sinkraten (m/s): [ 1.15095843  0.         -1.15095843  2.46634051 -1.31538208  0.\n",
+      " -1.15095843  1.15095843  1.15095926]\n"
      ]
     }
    ],
@@ -1151,7 +1151,7 @@
     "# name 14 = dz/dtM: Descent Rate [m/s] \n",
     "pressure_test_array = np.array([1.149,1.197,1.197,1.149,1.253,1.197,1.197,1.149,1.197,1.246])\n",
     "latitude = 54.50402\n",
-    "depths = depth_from_pressure(pressure, latitudes)\n",
+    "depths = depth_from_pressure(pressure, latitude)\n",
     "print(\"Deaths: \",depths)\n",
     "\n",
     "\n",
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "15b7c585-9d78-4730-a207-e09b123f6483",
    "metadata": {},
    "outputs": [
@@ -1497,10 +1497,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8936d814-7526-444a-829b-d67d6bb31a81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '°' (U+00B0) (950467276.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mname 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '°' (U+00B0)\n"
+     ]
+    }
+   ],
    "source": [
     "name 0 = Pressure: -42139.332086015915 db                        --> Falsch\n",
     "name 1 = Temp_1: 3.561563969710619 °C                     --> Richtig\n",
@@ -1579,7 +1588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
