descent rate doesnt work

--- a/converter-arrays.ipynb
+++ b/converter-arrays.ipynb
@@ -1110,8 +1110,8 @@
      "text": [
       "Voltages: [1.16971917 1.17094017 1.17094017 1.17216117 1.17094017 1.16971917\n",
       " 1.16971917 1.17094017 1.16971917 1.16971917]\n",
-      "Alimeter: [17.54578755 17.56410256 17.56410256 17.58241758 17.56410256 17.54578755\n",
-      " 17.54578755 17.56410256 17.54578755 17.54578755]\n"
+      "Alimeter: [23.39438339 23.41880342 23.41880342 23.44322344 23.41880342 23.39438339\n",
+      " 23.39438339 23.41880342 23.39438339 23.39438339]\n"
      ]
     }
    ],
@@ -1125,10 +1125,21 @@
     "    \n",
     "voltages3 = np.array(voltages3)\n",
     "\n",
-    "alt_m = 15.0 * voltages3 + 0.0\n",
+    "alt_m = (voltages3 * 300)/15 + 0.0\n",
     "print(\"Voltages:\", voltages3)\n",
-    "print(\"Alimeter:\",alt_m)"
+    "print(\"Alimeter:\",alt_m)\n",
+    "\n",
+    "\n",
+    "#  23.39 m     76.75 ft   15 scalefactor   0: offset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d555515c-af8b-4852-828d-2b823c897b16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
